# video-editor-ai

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yml  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  run_pipeline.sh  stage2_intervals.py  stage3_blender.py
.opencode/plugin/: validate.ts
scripts/: run_pipeline.sh
src/nagare_clip/: __main__.py  cli.py  config.py  logging_setup.py
src/nagare_clip/stage1_5/: cli.py  llm_filter.py  sync_json.py
src/nagare_clip/stage2/: __init__.py  bunsetu.py  cli.py  filler.py  intervals.py  io.py  llm_filter.py  speech.py  summary_llm.py
src/nagare_clip/stage3/: __init__.py  blender_cli.py  captions.py  scene.py  timeline.py
src/nagare_clip/stage4/: blender_cli.py  timeline.py
src/video_editor_ai/: cli.py
src/video_editor_ai/stage2/: __init__.py  bunsetu.py  captions.py  speech.py
tests/: test_config.py  test_logging_setup.py  test_stage2.py
tests/stage1_5/: test_llm_filter.py  test_sync_json.py
tests/stage2/: conftest.py  test_bunsetu.py  test_captions.py  test_intervals.py  test_llm_filter.py  test_speech.py  test_summary_llm.py
tests/stage3/: test_captions.py
tests/stage4/: test_caption_frames.py
